--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ## ignore data from assignment_01
 assignments/assignment_01/data
 assignments/assignment_03/tab_sep.txt
+assignments/assignment_03/GCF_000001735.4_TAIR10.1_genomic.fna
